--- a/exercises/todo/client/index.html
+++ b/exercises/todo/client/index.html
@@ -14,6 +14,7 @@
   <!-- Custom styles for this template -->
   <link href="css/main.css" rel="stylesheet">
   <link rel="stylesheet" href="css/font-awesome.min.css">
+  <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.6.0/pure-min.css">
 
   <script src="js/jquery.min.js"></script>
   <script src="js/angular.min.js" type="text/javascript"></script>
@@ -31,15 +32,39 @@
     <nav class="menu" id="theMenu">
       <div class="menu-wrap">
         <h1 class="logo"><a href="index.html#home">Lists</a></h1>
-        <i class="icon-remove menu-close"></i>
+        <i class="fa fa-times menu-close"></i>
+        <button class="pure-button btn-custom" data-toggle="modal" data-target="#myModal">
+          New List
+        </button>
         <div ng-repeat="list in todoLists">
           <a ng-click="updateItems(list.id)">{{list.name}}</a>
         </div>
       </div>
 
       <!-- Menu button -->
-      <div id="menuToggle"><i class="icon-reorder"></i></div>
+      <div id="menuToggle"><i class="fa fa-bars fa-lg"></i></div>
     </nav>
+
+    <div id="myModal" class="modal fade" role="dialog">
+      <div class="modal-dialog">
+        <!-- Modal content-->
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal">&times;</button>
+            <h4 class="modal-title">New List</h4>
+          </div>
+          <div class="modal-body">
+            <input ng-model="modalTitle" class="modal-input-title" type="text" placeholder="Title" /> <br />
+            <textarea ng-model="modalContent" class="modal-input-content" placeholder="Description"></textarea>
+          </div>
+          <div class="modal-footer">
+            <button ng-click="addList()" type="button" class="btn btn-default" data-dismiss="modal">Add</button>
+            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+          </div>
+        </div>
+
+      </div>
+    </div>
 
 
 
@@ -48,7 +73,7 @@
       <div class="container">
         <br>
         <div class="row">
-          <h1>Todo List</h1>
+          <h1>TODO</h1>
           <h3>Today you should...</h3>
           </div>
         </div>
@@ -59,12 +84,49 @@
     <!-- ========== ABOUT SECTION ========== -->
     <div id="f">
       <div class="list-container">
-        <h3 style="color:#f85c37;">{{listDesc}}</h3>
-        <div class="row" ng-repeat="item in items">
-          <h3>{{item.name}}</h3> <h4>{{item.description}}</h4>
-        </div>
+        <h1 style="color:#D4A017;">{{listDesc}}</h1>
+        <button class="pure-button btn-custom" style="margin:0;" data-toggle="modal" data-target="#listModal">
+          New Item
+        </button><br />
+        <table id="todo-list-table" class="pure-table">
+          <thead class="custom-thead">
+            <tr>
+              <th ng-click="sort('name')">Name</th>
+              <th ng-click="sort('description')">Description</th>
+              <th ng-click="sort('priority')">Priority</th>
+            </tr>
+          </thead>
+          <tbody class="custom-tbody">
+            <tr ng-repeat="item in items | orderBy:sortOrder">
+              <td>{{item.name}}</td>
+              <td>{{item.description}}</td>
+              <td>{{item.priority}}</td>
+            </tr>
+          </tbody>
+        </table>
       </div><!-- /container -->
     </div><!-- /f -->
+
+    <div id="listModal" class="modal fade" role="dialog">
+      <div class="modal-dialog">
+        <!-- Modal content-->
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal">&times;</button>
+            <h4 class="modal-title">New item</h4>
+          </div>
+          <div class="modal-body">
+            <input ng-model="itemModalTitle" class="modal-input-title" type="text" placeholder="Title" /> <br />
+            <textarea ng-model="itemModalContent" class="modal-input-content" placeholder="Description"></textarea>
+          </div>
+          <div class="modal-footer">
+            <button ng-click="addItem()" type="button" class="btn btn-default" data-dismiss="modal">Add</button>
+            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+          </div>
+        </div>
+
+      </div>
+    </div>
   </div>
 
   <!-- Bootstrap core JavaScript
